feat: creating products CRUD
