# app/Http/Requests/Product/StoreProductRequest.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Http\Requests\Product;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class StoreProductRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+
+            'category_id' => 'required|exists:categories,id',
+
+            'name' => 'required|string|max:255',
+
+            'description' => 'nullable|string',
+
+            'price' => 'required|numeric|min:0',
+
+            'stock' => 'required|integer|min:0',
+
+            'active' => 'boolean'
+
+        ];
+    }
+}
